--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -17,4 +17,4 @@ backoff = "0.1.6"
 tracing = "0.1.13"
 tracing-subscriber = "0.2.5"
 envy = "0.4.1"
-serde_with = "1.4.0"
+serde_with = { version = "1.4.0", features = ["json"] }
