--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -18,3 +18,4 @@ tracing = "0.1.13"
 tracing-subscriber = "0.2.5"
 envy = "0.4.1"
 serde_with = { version = "1.4.0", features = ["json"] }
+woothee = "0.11.0"
